--- a/html/index.html
+++ b/html/index.html
@@ -145,12 +145,12 @@
                 <li>
                     <img src="../images/preorder1.png" alt="preorder1">
                     <p>PARIS</p>
-                    <p id="typeface">$ 39.99</p>
+                    <p id="typeface" style="font-weight: inherit;">$ 39.99</p>
                 </li>
                 <li>
                     <img src="../images/preorder2.png" alt="preorder2">
                     <p>Villainous</p>
-                    <p id="typeface">$ 25.00</p>
+                    <p id="typeface" style="font-weight: inherit;">$ 25.00</p>
                 </li>
             </ul>
         </div>
