--- a/html/account_sign up.html
+++ b/html/account_sign up.html
@@ -28,6 +28,9 @@
         </div>
         <div style="margin-bottom: 0;" class="top_titleLogin">
             <h3>Sign Up</h3>
+            <p>Already Be A Member?
+                <a href="account_login.html"> Click Here To Log In</a>
+            </p>
         </div>
 
         <div class="middle_page_signup">
