--- a/html/account_sign up.html
+++ b/html/account_sign up.html
@@ -47,6 +47,7 @@
             <p>or</p>
             <div></div>
         </div>
+        <!-- Login with google & facebook -->
         <div class="bottom_part">
             <div>
                 <a href="#"><img src="../images/login.png" alt=""></a>
